# homesite

./: .gitignore  main.sh  pyproject.toml  setup_plaid_link.py
.devcontainer/: devcontainer.json
data/: transactions.csv
src/homesite/: config.py  main.py  utils.py
src/homesite/finance/: assets.py  transactions.py  utils.py
src/homesite/home/: home.py
