[project]
name = "homesite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "streamlit>=1.51.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ['src']
include = ['homesite*']

[tool.uv.sources]
homesite = { workspace = true }

[dependency-groups]
dev = [
    "homesite",
]

[tool.pytest.ini_options]
pythonpath="src"