[project]
name = "homesite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "plaid-python>=37.1.0",
    "plotly>=6.4.0",
    "streamlit>=1.51.0",
    "streamlit-javascript>=0.1.5",
    "streamlit-js-eval>=0.1.7",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ['src']
include = ['homesite*']

[tool.uv.sources]
homesite = { workspace = true }

[dependency-groups]
dev = [
    "flask>=3.1.2",
    "homesite",
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath="src"
